# for_shift

./: Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
data/: check_db.py  employee.py  employees.db  fill_db.py  init_db.py
fake/: employee.py
model/: error.py  user.py
service/: employee.py  jwt.py
test/unit/: test_data_employee.py  test_service_employee.py  test_web_employee.py
web/: employee.py
